--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "amigo_secreto",
-  "version": "1.0.0",
-  "description": "Projeto de sorteio para amigo X",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1",
-    "mysql2": "^3.2.0",
-    "sequelize": "^6.30.0"
-  }
+    "name": "amigo_secreto",
+    "version": "1.0.0",
+    "description": "Projeto de sorteio para amigo X",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.0.3",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "express-ejs-layouts": "^2.5.1",
+        "express-validator": "^6.15.0",
+        "mysql2": "^3.2.0",
+        "sequelize": "^6.30.0"
+    }
 }
