--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NODE_ENV=production
 
-DB_HOST=localhost
-DB_NAME=amigo_secreto
-DB_USER=root
-DB_PASS=252804277353
+DB_HOST=babar.db.elephantsql.com
+DB_NAME=omtwhlys
+DB_USER=omtwhlys
+DB_PASS=HRERX_gk2JMbXX9uQXE-skgFhjqGtuyG
 
 PORT=80
