--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "body-parser": "^1.20.2",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
         "pg": "^8.10.0",
         "pug": "^3.0.2",
